$Id$

2015-01-24  Christian Franke  <franke@computer.org>

	os_win32.cpp: Add Windows 10 to get_os_version_str().

2015-01-01  Christian Franke  <franke@computer.org>

	Happy New Year! Update copyright year in version info.

2014-12-13  Christian Franke  <franke@computer.org>

	drivedb.h:
	- USB: SanDisk SDCZ80 Flash Drive (0x0781:0x5580)
	- USB: WD My Passport: Merge entries, add 0x1058:0x0810
	- USB: WD Elements Desktop: Merge entries, add 0x1058:0x107c
	- USB: WD Elements: Merge entries
	- USB: JMicron JMS539 (0x152d:0x0539): 2.06 and 28.03 support SAT
	  (ticket #504)
	- USB: JMicron JMS567 (0x152d:0x0567) (ticket #504)
	- USB: JMicron JMS566 (0x152d:0x2566)
	- USB: Hitachi Touro (0x4971:0x1014)

2014-12-13  Christian Franke  <franke@computer.org>

	utility.cpp, utility.h: Remove unused functions Calloc() and
	CheckFree().

2014-12-10  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Western Digital Blue: Rename, *AZLX variant
	- Western Digital RE4: *FBYZ variant
	- Western Digital Green: Rename, add 5TB, 6TB
	- Western Digital AV: Rename, add 1TB, *BUCT variant
	- Western Digital Red: Rename, add 750GB, 5TB, 6TB
	- Western Digital Black Mobile

2014-12-08  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Hitachi Travelstar 5K500.B: *SA00 variant
	- Hitachi/HGST Travelstar Z5K500: Hitachi variant, Apple OEM
	- HGST Travelstar 5K1000
	- HGST Travelstar 5K1500
	- Hitachi Travelstar 7K500: *A360 variant
	- Hitachi CinemaStar 5K320
	- Hitachi Deskstar 7K1000.C: SATA 6Gb/s variants
	- HGST Deskstar NAS
	- Hitachi/HGST Ultrastar 7K4000: Rename, add HGST
	- HGST MegaScale 4000

2014-12-07  Christian Franke  <franke@computer.org>

	os_linux.cpp: Fix fd leak in megasas_dcmd_cmd().  Found by cppcheck.

2014-12-07  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Crucial/Micron MX100/M500/M510/M550/M600 Client SSDs: M600 EE variant
	- SandForce Driven SSDs: Kingston KC300 180GB
	- Indilinx Barefoot 3 based SSDs: OCZ Vector 150